@@ -126,7 +126,18 @@ A system that serialize widgets position and configuration
    Libraries versionning in doc/libVersionning.html and configure.in
 
 * v 0.0.5-194 (02 jun 2009 - ???)
-- (10) fixed defines doc warnings in config.h
+- (14) rainbrudef.h now handles HAVE_GETTEXT from config.h
+- Fixed defines doc warnings in config.h
+   HAVE_LANGINFO_CODESET, HAVE_INTTYPES_H_WITH_UINTMAX, HAVE_INTMAX_T
+   HAVE_ICONV, HAVE_GETUID, HAVE_GETTEXT, HAVE_GETPAGESIZE
+- Fixed defines doc warnings in config.h
+   HAVE_MUNMAP, HAVE_MMAP, HAVE_MEMPCPY, HAVE_LONG_LONG_INT
+   HAVE_LOCALE_H, HAVE_LIMITS_H, HAVE_LC_MESSAGES
+- fixed defines doc warnings in config.h
+   HAVE_STDDEF_H, HAVE_SNPRINTF, HAVE_SETLOCALE, HAVE_SETENV
+   HAVE_PUTENV, HAVE_PTHREAD_RWLOCK, HAVE_PTHREAD_MUTEX_RECURSIVE
+   HAVE_POSIX_PRINTF, HAVE_NL_LOCALE_NAME
+- fixed defines doc warnings in config.h
    HAVE_STRDUP, HAVE_STRCASECMP, HAVE_STPCPY, HAVE_STDINT_H_WITH_UINTMAX
 - fixed defines doc warnings in config.h
    HAVE_UINTMAX_T, HAVE_TSEARCH, HAVE_STRTOUL
